--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,56 @@
 version: 2
 jobs:
-  build:
+  # build:
+  #   docker:
+  #     - image: docker:17.05.0-ce-git
+  #   steps:
+  #     - checkout
+  #     - setup_remote_docker:
+  #         docker_layer_caching: true
+  #     - run:
+  #         name: Docker build and push
+  #         command: |
+  #           TAG=release-$CIRCLE_SHA1
+  #           docker build \
+  #             --build-arg COMMIT_REF=${CIRCLE_SHA1} \
+  #             --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
+  #             -t gocreating/cubee-api-server:$TAG .
+  #           docker login -u $DOCKER_USER -p $DOCKER_PASS
+  #           docker push gocreating/cubee-api-server:$TAG
+
+  deploy_to_production:
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: google/cloud-sdk
+    environment:
+      - PROJECT_NAME: "cubee-api-server"
+      - GOOGLE_PROJECT_ID: "cubee-247317"
+      - GOOGLE_COMPUTE_ZONE: "asia-southeast1-a"
+      - GOOGLE_CLUSTER_NAME: "cubee-production"
     steps:
       - checkout
-
-      - setup_remote_docker:
-          docker_layer_caching: true
-
-      # use a primary image that already has Docker (recommended)
-      # or install it during a build like we do here
-      # - run:
-      #     name: Install Docker client
-      #     command: |
-      #       set -x
-      #       VER="17.03.0-ce"
-      #       curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-      #       mv /tmp/docker/* /usr/bin
-
-      # build and push Docker image
-      - run: |
-          TAG=release-$CIRCLE_BUILD_NUM
-          docker build -t gocreating/cubee-api-server:$TAG .
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker push gocreating/cubee-api-server:$TAG
+      - run:
+          name: Setup Google Cloud SDK
+          command: |
+            apt-get install -qq -y gettext
+            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
+      - setup_remote_docker
+      - run:
+          name: Docker build and push
+          command: |
+            TAG=release-$CIRCLE_SHA1
+            docker build \
+              --build-arg COMMIT_REF=${CIRCLE_SHA1} \
+              --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
+              -t gocreating/cubee-api-server:$TAG .
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker push gocreating/cubee-api-server:$TAG
+      - run:
+          name: Deploy to Kubernetes
+          command: |
+            envsubst < ${HOME}/project/k8s.yml > ${HOME}/patched_k8s.yml
+            kubectl apply -f ${HOME}/patched_k8s.yml
+            kubectl rollout status deployment/${PROJECT_NAME}
