--- a/k8s.yml
+++ b/k8s.yml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: ${PROJECT_NAME}
-        image: gocreating/cubee-api-server:${CIRCLE_SHA1}
+        image: gocreating/cubee-api-server:release-${CIRCLE_SHA1}
         ports:
         - name: http
           containerPort: 8000
