--- a/k8s.yml
+++ b/k8s.yml
@@ -1,3 +1,22 @@
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: ${PROJECT_NAME}
+spec:
+  rules:
+  - host: api.cubee.cc
+    http:
+      paths:
+      - backend:
+          serviceName: ${PROJECT_NAME}
+          servicePort: 8000
+  - host: api-stg.cubee.cc
+    http:
+      paths:
+      - backend:
+          serviceName: ${PROJECT_NAME}
+          servicePort: 8000
+---
 kind: Service
 apiVersion: v1
 metadata:
@@ -7,9 +26,9 @@ spec:
     app: ${PROJECT_NAME}
   ports:
   - protocol: TCP
-    port: 80
+    port: 8000
     targetPort: 8000
-  type: LoadBalancer
+  type: NodePort
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
