--- a/k8s.yml
+++ b/k8s.yml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ${PROJECT_NAME}
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: "ingress-prod"
 spec:
   rules:
   - host: api.cubee.cc
