--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,14 +51,15 @@ jobs:
               --docker-username=$DOCKER_USER \
               --docker-password=$DOCKER_PASS
             envsubst < ${HOME}/project/helm-chart/${PROJECT_NAME}/values-prod.yml > ${HOME}/project/helm-chart/${PROJECT_NAME}/values.yml
-            export KUBECONFIG=$HOME/.kube/kubeconfig
+            # export KUBECONFIG=$HOME/.kube/kubeconfig
             kubectl delete secret tmp-registry
       - run:
           name: Install and configuire helm
           command: sudo curl -L https://storage.googleapis.com/kubernetes-helm/helm-v2.11.0-linux-amd64.tar.gz | tar xz && sudo mv linux-amd64/helm /bin/helm && sudo rm -rf linux-amd64
       - run:
           name: Initialize helm
-          command:  helm init --client-only --kubeconfig=$HOME/.kube/kubeconfig
+          # command:  helm init --client-only --kubeconfig=$HOME/.kube/kubeconfig
+          command:  helm init --client-only
       - run:
           name: Install tiller plugin
           command: helm plugin install https://github.com/rimusz/helm-tiller --kubeconfig=$HOME/.kube/kubeconfig
