--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,14 +55,15 @@ jobs:
             kubectl delete secret tmp-registry
       - run:
           name: Install and configuire helm
-          command: sudo curl -L https://storage.googleapis.com/kubernetes-helm/helm-v2.11.0-linux-amd64.tar.gz | tar xz && sudo mv linux-amd64/helm /bin/helm && sudo rm -rf linux-amd64
+          command: curl -L https://storage.googleapis.com/kubernetes-helm/helm-v2.11.0-linux-amd64.tar.gz | tar xz && mv linux-amd64/helm /bin/helm && rm -rf linux-amd64
       - run:
           name: Initialize helm
           # command:  helm init --client-only --kubeconfig=$HOME/.kube/kubeconfig
           command:  helm init --client-only
       - run:
           name: Install tiller plugin
-          command: helm plugin install https://github.com/rimusz/helm-tiller --kubeconfig=$HOME/.kube/kubeconfig
+          # command: helm plugin install https://github.com/rimusz/helm-tiller --kubeconfig=$HOME/.kube/kubeconfig
+          command: helm plugin install https://github.com/rimusz/helm-tiller
       - run:
           name: Release using helm chart
           command: |
