--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,34 +53,34 @@ jobs:
             envsubst < ${HOME}/project/helm-chart/${PROJECT_NAME}/values-prod.yml > ${HOME}/project/helm-chart/${PROJECT_NAME}/values.yml
             # export KUBECONFIG=$HOME/.kube/kubeconfig
             kubectl delete secret tmp-registry
-      - run:
-          name: install helm
-          command: |
-            echo "install helm"
+      # - run:
+      #     name: install helm
+      #     command: |
+      #       echo "install helm"
 
-            # installs helm with bash commands for easier command line integration
-            curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get | bash
+      #       # installs helm with bash commands for easier command line integration
+      #       curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get | bash
 
-            # add a service account within a namespace to segregate tiller
-            kubectl create serviceaccount --namespace kube-system tiller
+      #       # add a service account within a namespace to segregate tiller
+      #       kubectl create serviceaccount --namespace kube-system tiller
 
-            # create a cluster role binding for tiller
-            kubectl create clusterrolebinding tiller-cluster-rule \
-              --clusterrole=cluster-admin \
-              --serviceaccount=kube-system:tiller
-            kubectl patch deploy \
-              --namespace kube-system tiller-deploy \
-              -p '{"spec":{"template":{"spec":{"serviceAccount":"tiller"}}}}'
+      #       # create a cluster role binding for tiller
+      #       kubectl create clusterrolebinding tiller-cluster-rule \
+      #         --clusterrole=cluster-admin \
+      #         --serviceaccount=kube-system:tiller
+      #       kubectl patch deploy \
+      #         --namespace kube-system tiller-deploy \
+      #         -p '{"spec":{"template":{"spec":{"serviceAccount":"tiller"}}}}'
 
-            echo "initialize helm"
-            # initialized helm within the tiller service account
-            helm init --service-account tiller --upgrade
-            # updates the repos for Helm repo integration
-            helm repo update
+      #       echo "initialize helm"
+      #       # initialized helm within the tiller service account
+      #       helm init --service-account tiller --upgrade
+      #       # updates the repos for Helm repo integration
+      #       helm repo update
 
-            echo "verify helm"
-            # verify that helm is installed in the cluster
-            kubectl get deploy,svc tiller-deploy -n kube-system
+      #       echo "verify helm"
+      #       # verify that helm is installed in the cluster
+      #       kubectl get deploy,svc tiller-deploy -n kube-system
       - run:
           name: install chart
           command: helm install --name ${PROJECT_NAME} helm-chart/${PROJECT_NAME}
