--- a/rbac-config.yaml
+++ b/rbac-config.yaml
@@ -8,6 +8,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: tiller
+  user: gocreating@gmail.com
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
