--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,8 @@ jobs:
       - run:
           name: initialize helm
           command: |
+            kubectl create clusterrolebinding cluster-admin-binding \
+              --clusterrole cluster-admin --user gocreating@gmail.com
             kubectl apply -f rbac-config.yaml --user=gocreating@gmail.com
             helm init --service-account tiller --history-max 200
 
