--- a/rbac-config.yaml
+++ b/rbac-config.yaml
@@ -11,7 +11,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin-binding
+  name: cluster-admin
 subjects:
   - kind: ServiceAccount
     name: tiller
