--- a/helm-chart/cubee-api-server/templates/deployment.yaml
+++ b/helm-chart/cubee-api-server/templates/deployment.yaml
@@ -23,3 +23,7 @@ spec:
         - name: http
           containerPort: 8000
           protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: {{ .Values.healthz.path | default "/" }}
+              port: http
