--- a/helm-chart/cubee-api-server/templates/ingress.yaml
+++ b/helm-chart/cubee-api-server/templates/ingress.yaml
@@ -6,6 +6,12 @@ metadata:
     kubernetes.io/ingress.global-static-ip-name: "ingress-prod"
 spec:
   rules:
+  - host: cubee.cc
+    http:
+      paths:
+      - backend:
+          serviceName: {{ .Values.project.name }}
+          servicePort: 8000
   - host: api.cubee.cc
     http:
       paths:
