--- a/helm-chart/cubee-api-server/templates/ingress.yaml
+++ b/helm-chart/cubee-api-server/templates/ingress.yaml
@@ -6,6 +6,14 @@ metadata:
     kubernetes.io/ingress.global-static-ip-name: "ingress-prod"
 spec:
   rules:
+  - host: cubee.cc
+    http:
+      paths:
+      - path: /*
+        backend:
+          serviceName: {{ .Values.project.name }}
+          servicePort: 8000
+  # can redirect <any-sub-domain>.cubee.cc
   - host: www.cubee.cc
     http:
       paths:
