--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
           command: |
             echo $ANSIBLE_VAULT_PASSWORD > /root/ansible_vault.key
             ansible-vault decrypt \
-              ${HOME}/project/helm-chart/${PROJECT_NAME}/configMap-prod.yaml \
-              --output ${HOME}/project/helm-chart/${PROJECT_NAME}/templates/configMap-prod.yaml \
+              ./helm-chart/${PROJECT_NAME}/configMap-prod.yaml \
+              --output ./helm-chart/${PROJECT_NAME}/templates/configMap-prod.yaml \
               --vault-password-file=/root/ansible_vault.key
   deploy_to_production:
     docker:
