--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,13 @@ jobs:
               ./helm-chart/${PROJECT_NAME}/configMap-prod.yaml \
               --output ./helm-chart/${PROJECT_NAME}/templates/configMap-prod.yaml \
               --vault-password-file=/root/ansible_vault.key
+      - store_artifacts:
+          path: ~/fuck-circle-ci
+          destination: /pass
   deploy_to_production:
     docker:
       - image: google/cloud-sdk
-    working_directory: ~/fuck-circle-ci
+    working_directory: /pass
     environment:
       - PROJECT_NAME: "cubee-api-server"
       - GOOGLE_PROJECT_ID: "cubee-247317"
