--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,10 @@ jobs:
               ./helm-chart/${PROJECT_NAME}/configMap-prod.yaml \
               --output ./helm-chart/${PROJECT_NAME}/templates/configMap-prod.yaml \
               --vault-password-file=/root/ansible_vault.key
+      - persist_to_workspace:
+          root: ./helm-chart/${PROJECT_NAME}/templates
+          paths:
+            - configMap-prod.yaml
   deploy_to_production:
     docker:
       - image: google/cloud-sdk
@@ -36,7 +40,7 @@ jobs:
           command: ls -al
       - run:
           name: Fuck3
-          command: ls ./helm-chart/${PROJECT_NAME} -al
+          command: ls ./helm-chart/${PROJECT_NAME}/templates -al
       - run:
           name: Setup Google Cloud SDK
           command: |
