--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
               --output ./helm-chart/${PROJECT_NAME}/templates/configMap-prod.yaml \
               --vault-password-file=/root/ansible_vault.key
       - persist_to_workspace:
-          root: ./helm-chart/${PROJECT_NAME}/templates
+          root: /my-workspace
           paths:
             - configMap-prod.yaml
   deploy_to_production:
@@ -34,7 +34,10 @@ jobs:
       - checkout
       - run:
           name: Fuck1
-          command: pwd
+          command: |
+            pwd
+            ls /my-workspace
+            cat /my-workspace/configMap-prod.yaml
       - run:
           name: Fuck2
           command: ls -al
