--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,14 @@ jobs:
       - run:
           name: Decrypt
           command: |
-            mkdir -p /my-workspace
+            mkdir -p ./my-workspace
             echo $ANSIBLE_VAULT_PASSWORD > /root/ansible_vault.key
             ansible-vault decrypt \
               ./helm-chart/${PROJECT_NAME}/configMap-prod.yaml \
-              --output /my-workspace/configMap-prod.yaml \
+              --output ./my-workspace/configMap-prod.yaml \
               --vault-password-file=/root/ansible_vault.key
       - persist_to_workspace:
-          root: /my-workspace
+          root: ./my-workspace
           paths:
             - configMap-prod.yaml
   deploy_to_production:
