--- a/helm-chart/cubee-api-server/templates/deployment.yaml
+++ b/helm-chart/cubee-api-server/templates/deployment.yaml
@@ -19,10 +19,22 @@ spec:
       containers:
       - name: {{ .Values.project.name }}
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        resources:
+          requests:
+            memory: "80Mi"
         ports:
         - name: http
           containerPort: 8000
           protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.healthz.path | default "/" }}
+              port: http
+            initialDelaySeconds: {{ .Values.healthz.initialDelay | default 10 }}
+            periodSeconds: {{ .Values.healthz.period | default 15 }}
+            timeoutSeconds: {{ .Values.healthz.timeout | default 5 }}
+            successThreshold: {{ .Values.healthz.success | default 1 }}
+            failureThreshold: {{ .Values.healthz.failure | default 3 }}
           readinessProbe:
             httpGet:
               path: {{ .Values.healthz.path | default "/" }}
