--- a/helm-chart/cubee-api-server/templates/deployment.yaml
+++ b/helm-chart/cubee-api-server/templates/deployment.yaml
@@ -22,6 +22,11 @@ spec:
         # resources:
         #   requests:
         #     memory: "80Mi"
+        strategy:
+          type: RollingUpdate
+          rollingUpdate:
+            maxSurge: 1         # how many pods we can add at a time
+            maxUnavailable: 0   # maxUnavailable define how many pods can be unavailable during the rolling update
         ports:
         - name: http
           containerPort: 8000
