--- a/helm-chart/cubee-api-server/templates/ingress.yaml
+++ b/helm-chart/cubee-api-server/templates/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ .Values.project.name }}
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "ingress-prod"
+    networking.gke.io/managed-certificates: {{ .Values.project.name }}
 spec:
   rules:
   # can redirect cubee.cc, mutate with next rule
