--- a/helm-chart/cubee-api-server/templates/ingress.yaml
+++ b/helm-chart/cubee-api-server/templates/ingress.yaml
@@ -4,9 +4,16 @@ metadata:
   name: {{ .Values.project.name }}
   annotations:
     kubernetes.io/ingress.class: nginx
+    acme.kubernetes.io/enable: "true"
+    acme.kubernetes.io/dns: "dns_gd"
     # networking.gke.io/managed-certificates: {{ .Values.project.name }}
     # ingress.gcp.kubernetes.io/pre-shared-cert: "cubee-ingress"
 spec:
+  tls:
+  - hosts:
+      - cubee.cc
+      - "*.cubee.cc"
+    secretName: {{ .Values.secret.tlsName }}
   rules:
   # can redirect cubee.cc, mutate with next rule
   - host: cubee.cc
