--- a/helm-chart/cubee-api-server/templates/ingress.yaml
+++ b/helm-chart/cubee-api-server/templates/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     acme.kubernetes.io/enable: "true"
     acme.kubernetes.io/dns: "dns_gd"
+    acme.kubernetes.io/staging: "false"
     # networking.gke.io/managed-certificates: {{ .Values.project.name }}
     # ingress.gcp.kubernetes.io/pre-shared-cert: "cubee-ingress"
 spec:
