--- a/helm-chart/cubee-api-server/templates/certificate.yaml
+++ b/helm-chart/cubee-api-server/templates/certificate.yaml
@@ -1,7 +1,43 @@
-# apiVersion: networking.gke.io/v1beta1
-# kind: ManagedCertificate
+# apiVersion: certmanager.k8s.io/v1alpha1
+# kind: Certificate
 # metadata:
-#   name: {{ .Values.project.name }}
+#   name: cubee-cc
 # spec:
-#   domains:
-#     - cubee.cc
+#   secretName: {{ .Values.secret.tlsName }}
+#   issuerRef:
+#     name: letsencrypt-{{ .Values.project.name }}
+#   # commonName represents the server name protected by our SSL certificate and must be equal to the domain or else browsers will complain about it
+#   commonName: cubee.cc
+#   # dnsNames is a list of domains the certificate is valid for
+#   dnsNames:
+#   - cubee.cc
+#   - "*.cubee.cc"
+#   acme:
+#     config:
+#     - dns01:
+#         provider: acmedns
+#       domains:
+#         - cubee.cc
+#         - "*.cubee.cc"
+
+
+apiVersion: certmanager.k8s.io/v1alpha1
+kind: Certificate
+metadata:
+  name: wilcard-example-com-tls
+  namespace: letsencrypt-gcloud-balancer
+spec:
+  secretName: wilcard-example-com-tls
+  issuerRef:
+    name: letsencrypt-dns
+    kind: ClusterIssuer
+  dnsNames:
+    - cubee.cc
+    - "*.cubee.cc"
+  acme:
+    config:
+      - dns01:
+          provider: cf-dns
+        domains:
+          - cubee.cc
+          - "*.cubee.cc"
