--- a/helm-chart/cubee-api-server/templates/certificate.yaml
+++ b/helm-chart/cubee-api-server/templates/certificate.yaml
@@ -21,23 +21,23 @@
 #         - "*.cubee.cc"
 
 
-apiVersion: certmanager.k8s.io/v1alpha1
-kind: Certificate
-metadata:
-  name: wilcard-example-com-tls
-  namespace: letsencrypt-gcloud-balancer
-spec:
-  secretName: wilcard-example-com-tls
-  issuerRef:
-    name: letsencrypt-dns
-    kind: ClusterIssuer
-  dnsNames:
-    - cubee.cc
-    - "*.cubee.cc"
-  acme:
-    config:
-      - dns01:
-          provider: cf-dns
-        domains:
-          - cubee.cc
-          - "*.cubee.cc"
+# apiVersion: certmanager.k8s.io/v1alpha1
+# kind: Certificate
+# metadata:
+#   name: wilcard-example-com-tls
+#   namespace: letsencrypt-gcloud-balancer
+# spec:
+#   secretName: wilcard-example-com-tls
+#   issuerRef:
+#     name: letsencrypt-dns
+#     kind: ClusterIssuer
+#   dnsNames:
+#     - cubee.cc
+#     - "*.cubee.cc"
+#   acme:
+#     config:
+#       - dns01:
+#           provider: cf-dns
+#         domains:
+#           - cubee.cc
+#           - "*.cubee.cc"
