Add cert and cluster-issuer

--- a/helm-chart/cubee-api-server/values-prod.yaml
+++ b/helm-chart/cubee-api-server/values-prod.yaml
@@ -1,6 +1,9 @@
 project:
   name: cubee-api-server
 
+googleProject:
+  name: cubee-247317
+
 image:
   repository: gocreating/cubee-api-server
   tag: release-${CIRCLE_SHA1}
