--- a/helm-chart/cubee-api-server/templates/cluster-issuer.yaml
+++ b/helm-chart/cubee-api-server/templates/cluster-issuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-{{ .Values.project.name }}
+  name: letsencrypt-issuer
 spec:
   acme:
     # server: https://acme-v02.api.letsencrypt.org/directory
